fixed bug on a-hed spacing

--- a/theme/lil/css/styles.css
+++ b/theme/lil/css/styles.css
@@ -68,7 +68,7 @@ p a:active { color: #222; border-color: #222; }
 
 .intro-title, .container-title, .container-subtitle, .post-title, .headers .container-title, .headers .container-subtitle { font-weight: 700; line-height: 1.1; }
 
-.intro-title { font-size: 40px; margin: 8px 0; font-weight: 300; }
+.intro-title { font-size: 40px; margin: 8px auto; font-weight: 300; }
 
 @media only screen and (min-width: 641px) { .intro-title { font-size: 48px; } }
 
